--- a/style.css
+++ b/style.css
@@ -56,6 +56,35 @@ a:link, a:visited, a:hover, a:active{
     flex: 1;
 }
 
+.subcontent_2{
+    display: flex;
+    flex: 1;
+}
+
+.subcontent_3{
+    display: flex;
+    flex-direction: column;
+    flex: 1;
+}
+
+.subcontent_4{
+    display: flex;
+    flex-direction: column;
+    flex: 1;
+}
+
+.subcontent_5{
+    display: flex;
+    flex-direction: column;
+    flex: 1;
+}
+
+.subcontent_6{
+    display: flex;
+    flex-direction: column;
+    flex: 1;
+}
+
 .footer{
     display: flex;
     justify-content: center;
