--- a/style.css
+++ b/style.css
@@ -65,6 +65,7 @@ a:link, a:visited, a:hover, a:active{
 .content_4{
     display: flex;
     flex:  1;
+    margin: 75px;
 }
 
 .subcontent_1{
@@ -112,8 +113,11 @@ a:link, a:visited, a:hover, a:active{
 .subcontent_7{
     display: flex;
     flex: 1;
+    border-radius: 20px;
     background-color: #3882f6;
     color: #F9FAF8;
+    justify-content: space-evenly;
+    align-items: center;
 }
 
 .footer{
@@ -124,6 +128,8 @@ a:link, a:visited, a:hover, a:active{
     background-color: #1F2937;
     font-size: 18px;
     color: #E5E7EB;
+    padding-top: 50px;
+    padding-bottom: 50px;
 }
 
 .text_1{
@@ -185,6 +191,7 @@ button{
     align-items: center;
     font-size: 24px;
     color: #F9FAF8;
+    white-space: nowrap;
 }
 
 .content_2_1 img{
@@ -220,4 +227,22 @@ button{
     justify-content: flex-end;
     align-self: self-end;
     vertical-align: top;
+}
+
+.subcontent_7 button{
+    width: 100%;
+    border-radius: 25px;
+    justify-content: center;
+    align-items: center;
+    font-size: 24px;
+    color: #F9FAF8;
+    white-space: nowrap;
+    border-color: #F9FAF8;
+}
+
+.content_4_1 {
+    max-width: 60%;
+    margin-top: 50px;
+    margin-bottom: 50px;
+    font-size: 24px;
 }
